add html code for homepage

--- a/indexhome.html
+++ b/indexhome.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css"  />
+    <title>Momoory</title>
 </head>
 <body>
-    
+    <header>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Game</li>
+            <li>Rank</li>
+            <li>About Us</li>
+        </ul>
+        </nav>
+</header>
+        <h1 class="welcome">Welcome to Memoory !</h1>
+
+<div class="bouton1">
+        <button class="play">PLAY !</button>
+    </div>
 </body>
 </html>
