--- a/indexaboutus.html
+++ b/indexaboutus.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link href="styleaboutus.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+
+    <title>About us</title>
 </head>
+
 <body>
+
+
+    <header>
+        <!-- mettre le logo à gauche et la nav à droite -->
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Game</a></li>
+                <li><a href="#">Rank</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </nav>
+    </header>
     
+    <h1>Team Maroon 3</h1>
+    <div class="wrapper">
+        <article class="about-us-cards">
+            <img src="https://i.imgur.com/FNBWXcv.jpg">
+            <div>
+                <h2>Prénoms Noms</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                    into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                    release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+                    software like Aldus PageMaker including versions of Lorem Ipsum.
+    
+                    </p>
+            </div>
+        </article>
+
+        <article class="about-us-cards">
+            <img src="https://i.imgur.com/FNBWXcv.jpg">
+            <div>
+                <h2>Prénoms Noms</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                    into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                    release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+                    software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+            </div>
+
+        </article>
+
+        <article class="about-us-cards">
+            <img src="https://i.imgur.com/FNBWXcv.jpg">
+            <div>
+                <h2>Prénoms Noms</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                    into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                    release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+                    software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+            </div>
+        </article>
+    </div>
+
+
+
+
+    <!-- Peut etre rajouter un footer -->
+
+
+
+
+
 </body>
+
 </html>
