--- a/indexhome.html
+++ b/indexhome.html
@@ -11,17 +11,17 @@
     <header>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Game</li>
-            <li>Rank</li>
-            <li>About Us</li>
+            <li><a ref="indexhome.html">Home</a></li>
+            <li><a href="indexgame.html">Game</a></li>
+            <li><a href="indexrank.html">Rank</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
         </ul>
         </nav>
 </header>
         <h1 class="welcome">Welcome to Memoory !</h1>
 
 <div class="bouton1">
-        <button class="play">PLAY !</button>
+        <button class="play"><a href ="indexgame.html">PLAY !</button>
     </div>
 </body>
 </html>
