--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
-<!doctype html>
-<html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="stylehome.css"  />
+    <title>Momoory</title>
+</head>
+<body>
+    <header>
+    <nav>
+        <ul>
+            <li><a ref="indexhome.html">Home</a></li>
+            <li><a href="indexgame.html">Game</a></li>
+            <li><a href="indexrank.html">Rank</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+        </ul>
+        </nav>
+</header>
+        <h1 class="welcome">Welcome to Memoory !</h1>
+
+<div class="bouton1">
+        <button class="play"><a href ="indexgame.html">PLAY !</button>
+    </div>
+</body>
 </html>
