Add Nav, nav links, footer and correction css

--- a/game.html
+++ b/game.html
@@ -4,24 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="game.css"  />
+    <link rel="stylesheet" type="text/css" href="stylegame.css"  />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Momoory</title>
 </head>
 <body>
     <header>
-    <nav>
-        <ul>
-            <li><a ref="indexhome.html">Home</a></li>
-            <li><a href="indexgame.html">Game</a></li>
-            <li><a href="indexrank.html">Rank</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="game.html" class="current">Game</a></li>
+                <li><a href="rank.html">Rank</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+            </ul>
         </nav>
-</header>
-<section class="sectionJeu">
-<div class="zoneJeu">
-<article></article>
-</div>
-</section>
+    </header>
+
+
+    <h1>Titre</h1>
+
+    <section class="sectionJeu">
+
+        <div class="zoneJeu">
+            
+            <article></article>
+        </div>
+    </section>
+
+
+<footer>
+    <p>FOOTER</p>
+</footer>
+
+
+
 </body>
 </html>
