--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="styleaboutus.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -15,14 +17,12 @@
 
 
     <header>
-        <!-- mettre le logo à gauche et la nav à droite -->
-
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Game</a></li>
-                <li><a href="#">Rank</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="game.html">Game</a></li>
+                <li><a href="rank.html">Rank</a></li>
+                <li><a href="aboutus.html" class="current">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -77,7 +77,9 @@
 
 
 
-    <!-- Peut etre rajouter un footer -->
+    <footer>
+        <p>FOOTER</p>
+    </footer>
 
 
 
