--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- <link href="site.css" rel="stylesheet"> -->
     <link href="header.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +20,10 @@
 
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Game</a></li>
-                <li><a href="#">Rank</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="game.html">Game</a></li>
+                <li><a href="rank.html">Rank</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
     </header>
