--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylehome.css"  />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Momoory</title>
 </head>
 <body>
     <header>
-    <nav>
-        <ul>
-            <li><a ref="indexhome.html">Home</a></li>
-            <li><a href="indexgame.html">Game</a></li>
-            <li><a href="indexrank.html">Rank</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="current">Home</a></li>
+                <li><a href="game.html">Game</a></li>
+                <li><a href="rank.html">Rank</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+            </ul>
         </nav>
-</header>
-        <h1 class="welcome">Welcome to Memoory !</h1>
+    </header>
+    
+    <h1>Welcome to Memoory !</h1>
 
-<div class="bouton1">
-        <button class="play"><a href ="indexgame.html">PLAY !</button>
+    <div class="bouton1">
+        <button class="play"><a href ="game.html">PLAY !</button>
     </div>
+
 </body>
 </html>
