--- a/rank.html
+++ b/rank.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylerank.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Rank</title>
 </head>
+
+
 <body>
     <header>
-        <div>
-            <i class="M3-icon"></i>
-        </div>
-        <nav id="navbar">
-            <h1 id="memory_title"><a href="">Memoory</a></h1>
-            <ul id="scrolling_menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">Rank</a></li>
-                <li><a href="">About</a></li>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="game.html">Game</a></li>
+                <li><a href="rank.html" class="current">Rank </a></li>
+                <li><a href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
     </header>
+
+        <h1>Hall of Glory</h1>
+
     <main>
-        <div class="hall-of-glory-container">
-            <h1>Hall of Glory</h1>
-        </div>
         <div class="table-container">
             <thead>
                 <tbody>
@@ -32,13 +33,24 @@
                 </tbody>
             </thead>
         </div>
+
+
         <div class="retry-button">
             <input type="submit" value="Try again">
         </div>
+
     </main>
+
+
+
+
+
     <footer>
-        <h1>FOOTER</h1>
+        <p>FOOTER</p>
     </footer>
+
+
     <script src="scriptrank.js"></script>
+
 </body>
 </html>
