--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-
+<main>
 
     <h1>Titre</h1>
 
@@ -31,6 +31,8 @@
             <article></article>
         </div>
     </section>
+</main>
+
 
 
 <footer>
