correction button homepage and rankpage

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </nav>
     </header>
     
-    <h1>Welcome to Memoory !</h1>
-
     <div class="bouton1">
+        <div class="titlehome"> <h1>Welcome to Memoory !</h1>   </div>
+        
         <button class="play"><a href ="game.html">PLAY !</button>
     </div>
 
