--- a/rank.html
+++ b/rank.html
@@ -36,9 +36,11 @@
 
 
         <div class="retry-button">
-            <input type="submit" value="Try again">
-        </div>
 
+            <button class="submit"><a href ="game.html">Try again</button>
+
+        </div>
+        
     </main>
 
 
