--- a/TestChrono.html
+++ b/TestChrono.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="TestChrono.js" async></script>
+    
     <title>Document</title>
 </head>
 <body>
-
+<main>
+<input id="chrono" value="00:00.00"></input><br>
 <button id="startChrono">Start</button>
 <button id="stopChrono">Stop</button>
-<button id="reset">Reset</button>
-<p id="chrono"></p>
 
 
+<script src="TestChrono.js" async></script>
+</main>
 </body>
 </html>
