create array and suffle

--- a/game.html
+++ b/game.html
@@ -28,12 +28,12 @@
 
         <div class="zoneJeu">
             
-            <article></article>
+            <article class="card-img"></article>
         </div>
     </section>
 </main>
 
-
+<script src="arraycards.js"></script>
 
 <footer>
     <p>FOOTER</p>
