add display card

--- a/game.html
+++ b/game.html
@@ -28,7 +28,8 @@
 
         <div class="zoneJeu">
             
-            <article class="card-img"></article>
+            <div id="card-container"></div>
+    
         </div>
     </section>
 </main>
