--- a/game.html
+++ b/game.html
@@ -26,11 +26,18 @@
 
     <section class="sectionJeu">
 
+
+
+        <label for="points">Points :</label>
+        <input class="score-container" readonly></input>
+
         <div class="zoneJeu">
-            
+
             <div id="card-container"></div>
     
         </div>
+
+
     </section>
 </main>
 
