--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="bouton1">
         <div class="titlehome"> <h1>Welcome to Memoory !</h1>   </div>
         
-        <button class="play"><a href ="game.html">PLAY !</button>
+        <button class="play"><a href ="game.html">PLAY !</a></button>
     </div>
 
 </body>
