modif JS arraycards and add rank JS

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylegame.css"  />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <title>Momoory</title>
+    <title></title>
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
 
 
         <label for="points">Points :</label>
-        <input class="score-container" readonly></input>
+        <input class="score-container" value="0" readonly></input>
 
         <div class="zoneJeu">
 
