--- a/aboutus.html
+++ b/aboutus.html
@@ -30,9 +30,9 @@
     <h1>Team Maroon 3</h1>
     <div class="wrapper">
         <article class="about-us-cards">
-            <img src="https://i.imgur.com/FNBWXcv.jpg">
+            <img src="./images/donuts/2228.jpg">
             <div>
-                <h2>Prénoms Noms</h2>
+                <h2>Priscillia Schnur</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                     scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
@@ -45,9 +45,9 @@
         </article>
 
         <article class="about-us-cards">
-            <img src="https://i.imgur.com/FNBWXcv.jpg">
+            <img src="./images/donuts/3305.jpg">
             <div>
-                <h2>Prénoms Noms</h2>
+                <h2>Brandon Monge</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                     scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
@@ -60,9 +60,9 @@
         </article>
 
         <article class="about-us-cards">
-            <img src="https://i.imgur.com/FNBWXcv.jpg">
+            <img src="./images/donuts/19-08.jpg">
             <div>
-                <h2>Prénoms Noms</h2>
+                <h2>Jonathan Gaborit</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                     scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
