Correction game HTML

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
     </header>
 <main>
 
-    <h1>Titre</h1>
+    <h1>Memoory Game</h1>
 
     <section class="sectionJeu">
 
@@ -44,7 +44,7 @@
 <script src="arraycards.js"></script>
 
 <footer>
-    <p>FOOTER</p>
+
 </footer>
 
 
